# particles

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: CircleOnQuad_Instanced.frag  Square_Instanced.frag  Triangle_Instanced.frag  additiveBlend.frag  additiveBlend.glsl  batchParticleSystem.frag  batchParticleSystem.glsl  batchParticleSystem.vert  blur.glsl  circle.frag  fragmentShader.glsl  instanced.vert  postprocessingShader.frag  simpleParticleSystem.glsl  simpleParticleSystem.vert  square.frag  texture.glsl  vertexShader.glsl
particle-system/particle-system/: AdditiveBlend.h  BatchParticleSystem.h  Camera.h  Containers.h  GaussianBlur.h  Grid.h  InstancedParticleSystem.h  OpenGLUtils.h  SimpleParticleSystem.h  TexturedQuad.h  main.cpp  shader.h
src/: AdditiveBlend.h  BatchParticleSystem.h  GaussianBlur.h  InstancedParticleSystem.h  Particle.h  Shader.h  SimpleParticleSystem.h  TexturedQuad.h  Timer.h  main.cpp
